Split text parsing out of StringUtil
Hopefully also fixes /show