@@ -1,23 +1,23 @@
 package com.easterlyn.util.text;
 
-import java.util.Arrays;
+import org.jetbrains.annotations.NotNull;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import java.util.regex.Pattern;
 
 public abstract class StaticQuoteConsumer implements QuoteConsumer {
 
   private final Collection<Pattern> patterns;
 
-  public StaticQuoteConsumer(Pattern pattern) {
-    this.patterns = Collections.singleton(pattern);
+  public StaticQuoteConsumer(@NotNull Pattern pattern) {
+    this.patterns = Set.of(pattern);
   }
 
-  public StaticQuoteConsumer(Pattern... patterns) {
+  public StaticQuoteConsumer(@NotNull Pattern @NotNull ... patterns) {
     if (patterns.length == 0) {
       throw new UnsupportedOperationException("Include a pattern in the constructor, you numpty.");
     }
-    this.patterns = Arrays.asList(patterns);
+    this.patterns = Set.of(patterns);
   }
 
   public StaticQuoteConsumer(Collection<Pattern> patterns) {
@@ -28,4 +28,5 @@ public abstract class StaticQuoteConsumer implements QuoteConsumer {
   public Iterable<Pattern> getPatterns() {
     return patterns;
   }
+
 }
